Fix header covering greeting issue

--- a/src/styles/job.module.css
+++ b/src/styles/job.module.css
@@ -21,3 +21,10 @@
   font-family: var(--oxygen-mono);
   font-size: var(--fs-sm);
 }
+
+@media screen and (max-width: 768px) {
+  .flexbetween {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
